# ccmixterdl

./: README.md  data.txt  setup.cfg  text.txt
src/ccmixter_dl.egg-info/: PKG-INFO  SOURCES.txt
src/ccmixterdl/: ccmixterdl.py  data.txt  from ccmixterdl import main.py
srrc/ccmixer.egg-info/: SOURCES.txt
srrrc/ccmixer.egg-info/: PKG-INFO
srrrc/ccmixter_dl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
srrrc/ccmixterdl/: main.py
srrrc/myproject.egg-info/: PKG-INFO  SOURCES.txt
